--- a/pages/index.css
+++ b/pages/index.css
@@ -5,48 +5,4 @@
 @import url("../blocks/profile.css");
 @import url("../blocks/cards.css");
 @import url("../blocks/footer.css");
-
-@media screen and (max-width: 1100px) {
-  .page__section {
-    margin: 0 20px;
-    max-width: calc(100% - 40px);
-  }
-}
-
-@media screen and (max-width: 850px) {
-  .cards {
-    margin-top: 51px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .profile {
-    flex-direction: column;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-    margin-top: 30px;
-    margin-bottom: 36px;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-    margin-top: 14px;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    width: 282px;
-  }
-
-  .cards {
-    margin-top: 36px;
-  }
-}
+@import url("../blocks/media.css");
