--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,8 +4,16 @@
 }
 .footer__content {
   color: #545454;
-  font-family: Inter, Arial, "Times New Roman", Times, serif;
+  font-family: Inter, Arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.78px;
+  margin: 0;
+}
+
+@media screen and (max-width: 480px) {
+  .footer__content {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
