--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,5 +2,5 @@
   margin-top: 45px;
   min-height: 74px;
   max-width: 880px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
