--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -22,19 +22,21 @@
 }
 
 .profile__title {
-  font-family: Inter, Arial, "Times New Roman", Times, serif;
+  font-family: Inter, Arial, sans-serif;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
   grid-area: title;
   margin: 0px;
   text-wrap: nowrap;
+  overflow: hidden;
+  max-width: 373px;
 }
 
 .profile__description {
   font-size: 18px;
   line-height: 22px;
-  font-family: Inter, Arial, "Times New Roman", Times, serif;
+  font-family: Inter, Arial, sans-serif;
   font-weight: 400;
   grid-area: description;
   margin-top: 7px;
@@ -45,7 +47,7 @@
 }
 
 .profile__edit-button {
-  background: transparent url("../images/Edit\ Button.svg") center no-repeat;
+  background: transparent url("../images/EditButton.svg") center no-repeat;
   height: 24px;
   width: 24px;
   grid-area: button;
@@ -54,8 +56,7 @@
 }
 
 .profile__edit-button:hover {
-  background: transparent url("../images/edit-button-hover.svg") center
-    no-repeat;
+  opacity: 60%;
 }
 
 .profile__add-button {
@@ -65,10 +66,11 @@
   height: 50px;
   margin-left: auto;
   border: 2px;
+  border-radius: 2px;
 }
 
 .profile__add-button:hover {
-  background: transparent url("../images/Add-button-hover.svg") center no-repeat;
+  opacity: 60%;
 }
 
 @media screen and (max-width: 480px) {
@@ -85,10 +87,17 @@
     margin-bottom: 36px;
   }
 
+  .profile__title {
+    line-height: 26.63px;
+    font-size: 22px;
+  }
+
   .profile__description {
     width: 100%;
     text-align: center;
     margin-top: 14px;
+    font-size: 14px;
+    line-height: 16.94px;
   }
 
   .profile__add-button {
