--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,3 +4,9 @@
   max-width: 880px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
+
+@media screen and (max-width: 480px) {
+  .header {
+    margin-top: 28px;
+  }
+}
