--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,8 @@
 .header {
   margin-top: 45px;
   min-height: 74px;
-  max-width: 880px;
+  /* max-width: 880px; */
+  width: 100%;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
