--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,6 +12,10 @@
 }
 
 @media screen and (max-width: 480px) {
+  .footer {
+    margin: 48px 0px 36px 20px;
+  }
+
   .footer__content {
     font-size: 14px;
     line-height: 17px;
