--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,6 @@
 .header {
   margin-top: 45px;
   min-height: 74px;
-  /* max-width: 880px; */
   width: 100%;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
@@ -9,5 +8,12 @@
 @media screen and (max-width: 480px) {
   .header {
     margin-top: 28px;
+    min-height: 0px;
+    height: 56px;
+  }
+  .header__image {
+    width: 126px;
+    height: 24px;
+    margin-left: 27px;
   }
 }
