--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -19,7 +19,7 @@
   border-radius: 10px;
 }
 
-.modal__opened {
+.modal_opened {
   display: flex;
 }
 
@@ -57,7 +57,7 @@
   gap: 30px;
 }
 
-.modal__text {
+.modal__input {
   min-width: 356px;
   min-height: 27px;
   font-size: 14px;
@@ -102,7 +102,7 @@
     margin-top: 75px;
   }
 
-  .modal__text {
+  .modal__input {
     min-width: 238px;
   }
 
